more one swagger
- add more one example api doc
